--- a/app/views/invite_people.html
+++ b/app/views/invite_people.html
@@ -8,7 +8,7 @@
         </div>
     </div>              
     <div class="panel-boxed">
-    	<form ng-submit='invitePerson(formData.url, formData.email, global.user.value.linkedin.id)' data-wizard="{finishButton: true, titleClick: false, block: true, validate: true, legend: false }" class="form-horizontal">
+    	<form ng-submit='invitePerson(formData.url, formData.email, global.user.profile.linkedin.id)' data-wizard="{finishButton: true, titleClick: false, block: true, validate: true, legend: false }" class="form-horizontal">
     		<fieldset title="Contact Info">
     			<legend></legend>
     			<div class="form-group">
