--- a/app/views/network.html
+++ b/app/views/network.html
@@ -6,7 +6,7 @@
       <div class="row">
         <!-- Main Title (hidden on small devices for the statistics to fit) -->
         <div class="col-md-4 col-lg-6 hidden-xs hidden-sm">
-          <h1><strong>Innovation</strong> Garden<br><small>Welcome {{global.user.value.name | words:0}}!</small></h1>
+          <h1><strong>Innovation</strong> Garden<br><small>Welcome {{global.user.profile.name | words:0}}!</small></h1>
         </div>
         <!-- END Main Title -->
 
