--- a/app/views/templates/people_renderer.html
+++ b/app/views/templates/people_renderer.html
@@ -1,27 +1,27 @@
 <td class="text-center" style="width: 58px; vertical-align: top; height: 80px;">
-    <a ng-click="viewUser(item)" title="View {{::item.value.name | words:0}}'s Profile"><img style="height:58px" ng-src="{{item.value.linkedin.pictureUrl || item.value.avatar}}" fallback-src="{{'/public/blank_avatar.png'}}" alt="{{::item.value.name}}" class="widget-image img-circle pull-left"/></a>
+    <a ng-click="viewUser(item)" title="View {{::item.value.profile.name | words:0}}'s Profile"><img style="height:58px" ng-src="{{item.value.profile.linkedin.pictureUrl || item.value.profile.avatar}}" fallback-src="{{'/public/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="widget-image img-circle pull-left"/></a>
 </td>   
 <td style="vertical-align: middle; height: 80px;">
-    <a ng-click="viewUser(item)" title="View {{::item.value.name | words:0}}'s Profile"><strong>{{::item.value.name}} </strong></a>
-    <a ng-show="{{(item.value.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" style="color: #DDDDDD;">
+    <a ng-click="viewUser(item)" title="View {{::item.value.profile.name | words:0}}'s Profile"><strong>{{::item.value.profile.name}} </strong></a>
+    <a ng-show="{{(item.value.profile.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" style="color: #DDDDDD;">
         <i class="fa fa-chevron-down fa-fw"></i>
     </a>
     <br>
-    <span class="text-muted" ng-bind-html="::item.value.linkedin.headline | highlight:global.search.lastQuery"></span>                                
-    <div ng-show="(showSummary || global.search.count) && item.value.linkedin.summary" style="padding-bottom: 10px;">
+    <span class="text-muted" ng-bind-html="::item.value.profile.linkedin.headline | highlight:global.search.lastQuery"></span>
+    <div ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary" style="padding-bottom: 10px;">
         <hr>
-        <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.linkedin.summary | linky:'_blank' | highlight:global.search.lastQuery | safe_html"></span>
+        <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.linkedin.summary | linky:'_blank' | highlight:global.search.lastQuery | safe_html"></span>
     </div>
 </td>
 <td style="vertical-align: middle; height: 80px;">
-    <li ng-repeat="(cluster, val) in item.value.cities[global.city.path.key].clusters" style="list-style: none; display: inline; float: right; padding-left: 5px;">
-       <span ng-hide="((val.roles.indexOf('Advisor') >= 0) && (val.roles.indexOf('Founder') < 0) && (val.roles.indexOf('Investor') < 0)) && item.value.cities[global.city.path.key].cityAdvisor === true" title="{{cluster}} Cluster" class="btn btn-xs btn-alt btn-default" ng-class="{ 'btn-info' : ((val.roles.indexOf('Advisor') >= 0) && (val.roles.indexOf('Founder') < 0) && (item.value.cities[global.city.path.key].cityAdvisor === false || item.value.cities[global.city.path.key].cityAdvisor === undefined)), 'btn-danger' : (val.roles.indexOf('Founder') >= 0) }" style="cursor: default;"><i class="fa {{global.city.value.clusters[cluster].icon}}"></i></span>
+    <li ng-repeat="(cluster, val) in item.value.profile.cities[global.city.path.key].clusters" style="list-style: none; display: inline; float: right; padding-left: 5px;">
+       <span ng-hide="((val.roles.indexOf('Advisor') >= 0) && (val.roles.indexOf('Founder') < 0) && (val.roles.indexOf('Investor') < 0)) && item.value.profile.cities[global.city.path.key].cityAdvisor === true" title="{{cluster}} Cluster" class="btn btn-xs btn-alt btn-default" ng-class="{ 'btn-info' : ((val.roles.indexOf('Advisor') >= 0) && (val.roles.indexOf('Founder') < 0) && (item.value.profile.cities[global.city.path.key].cityAdvisor === false || item.value.profile.cities[global.city.path.key].cityAdvisor === undefined)), 'btn-danger' : (val.roles.indexOf('Founder') >= 0) }" style="cursor: default;"><i class="fa {{global.city.value.profile.clusters[cluster].icon}}"></i></span>
     </li>
-    <li ng-if="item.value.cities[global.city.path.key].cityAdvisor === true" style="list-style: none; display: inline; float: right; padding-left: 5px;">
+    <li ng-if="item.value.profile.cities[global.city.path.key].cityAdvisor === true" style="list-style: none; display: inline; float: right; padding-left: 5px;">
        <span title="General Advisor" class="btn btn-xs btn-alt btn-info" style="cursor: default;">General Advisor</span>
     </li>
-    <div id="skills" ng-show="(showSummary || global.search.count) && item.value.linkedin.summary" style="padding-top:40px">
-        <li ng-repeat="skill in item.value.linkedin.skills.values" class="label btn-default" style="margin-right: 3px; margin-top: 3px; float:right; padding-bottom: 5px;">
+    <div id="skills" ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary" style="padding-top:40px">
+        <li ng-repeat="skill in item.value.profile.linkedin.skills.values" class="label btn-default" style="margin-right: 3px; margin-top: 3px; float:right; padding-bottom: 5px;">
             <a><span ng-click="search(skill.skill.name)" ng-bind-html="::skill.skill.name | highlight:global.search.lastQuery"></span></a>
         </li>			
     </div>
