working on navigation

--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -16,6 +16,17 @@ body {
   height: 100%;
 }
 
+.back-cover {
+  background: url('../images/office_table_wash.jpg') no-repeat center center fixed;
+  margin-left: 0px !important;
+  height: 100%;
+  position: relative;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 #header {
   background-color: #fff;
   display: block;
