--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -1,7 +1,7 @@
 /* Panels */
 .hpanel > .panel-heading {
   color: inherit;
-  font-weight: 600;
+  font-weight: 300;
   padding: 10px 4px;
   transition: all .3s;
   border: 1px solid transparent;
@@ -57,8 +57,8 @@
 .hpanel .alert {
   margin-bottom: 0;
   border-radius: 0;
-  border: 1px solid @border-color;
-  border-bottom: none;
+  //border: 1px solid @border-color;
+  //border-bottom: none;
 }
 
 .panel-tools a {
@@ -169,12 +169,12 @@
 }
 
 .panel-body h5, .panel-body h4 {
-  font-weight: 600;
+  font-weight: 100;
 }
 
 .small-header .panel-body h2 {
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 100;
   text-transform: uppercase;
   margin: 0 0 0 0;
 }
