--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -11,7 +11,7 @@
     <div class="navbar-right">
         <ul class="nav navbar-nav no-borders">
             <li class="dropdown">
-                <a>
+                <a tooltip-placement="left" tooltip="Sign Out" ng-click="global.logout()">
                     <i class="pe-7s-upload pe-rotate-90"></i>
                 </a>
             </li>
