--- a/app/views/login_old.html
+++ b/app/views/login_old.html
@@ -1,6 +1,4 @@
-<div class="bright-line">
-
-    <div class="login-container" ng-controller="LoginCtrl">
+<div class="verticalcenter" ng-controller="LoginCtrl">
 	<a href="/"><img src="../assets/img/sc_logo.png" alt="Logo" class="brand" style="margin-bottom: -30px; width: 350px;"/></a>
 
 	<div class="panel panel-primary">
