--- a/app/less/style.less
+++ b/app/less/style.less
@@ -5,7 +5,7 @@
 @color-navy-blue:#34495e;
 @color-violet:#9b59b6;
 @color-blue:#3498db;
-@color-green:#62cb31;
+@color-green:#82bc4b;
 @color-yellow:#ffb606;
 @color-orange:#e67e22;
 @color-red:#e74c3c;
@@ -28,13 +28,8 @@
 @import "modal.less";
 @import "progress_bar.less";
 @import "login.less";
-@import "timeline.less";
-@import "contact.less";
-@import "calendar.less";
-@import "text_editor.less";
 @import "grid.less";
 @import "dropdown.less";
-@import "chat.less";
 @import "buttons.less";
 @import "fonts.less";
 @import "icheck.less";
@@ -42,19 +37,6 @@
 @import "lists.less";
 @import "panels.less";
 @import "tabs.less";
-@import "tooltip.less";
 @import "various.less";
 @import "base.less";
-@import "projects.less";
-@import "social_board.less";
-@import "nestable_list.less";
-@import "tour.less";
-@import "blog.less";
-@import "forum.less";
-@import "wizard.less";
-@import "mailbox.less";
-
-// Styles for landing page
-@import "landing.less";
-
 
