--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -1,15 +1,17 @@
 <div id="navigation">
     <div class="profile-picture">
-        <div class="stats-label text-color">
-            <span class="font-extra-bold font-uppercase">Username</span>
+        <a ui-sref="app_views.profile">
+            <img ng-src="{{global.user.profile.avatar || global.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.profile.name}}" class="img-circle m-b">
+        </a>
 
-            <div class="dropdown" dropdown >
-                <a dropdown-toggle class="dropdown-toggle" href="#">
-                    <small class="text-muted">Founder of App <b class="caret"></b></small>
-                </a>
-                <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                    <li><a>Item</a></li>
-                </ul>
+        <div class="stats-label text-color">
+            <span class="font-extra-bold font-uppercase">{{global.user.profile.name}}</span>
+
+            <div>
+                <h4 class="font-extra-bold m-b-xs">
+                    $260,104,200
+                </h4>
+                <small class="text-muted">Your income from last year.</small>
             </div>
         </div>
     </div>
@@ -19,4 +21,10 @@
             <a ui-sref="dashboard"> <span class="nav-label">Dashboard</span></a>
         </li>
     </ul>
+    <div>
+        <ul id="sidebar" sticky-scroll="40">
+
+
+        </ul>
+    </div>
 </div>
