--- a/app/less/various.less
+++ b/app/less/various.less
@@ -191,37 +191,45 @@
 }
 
 #side-menu li a {
-  color: @color-text;
+  color: #999;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   padding: 15px 20px;
 }
 
+#side-menu li a i {
+  color: #888;
+}
+
 #side-menu li {
-  .border-bottom
+  //.border-bottom
 }
 
 #side-menu li:first-child {
-  border-top: 1px solid @border-color;
+  //border-top: 1px solid @border-color;
 }
 
 #side-menu li.active a, #side-menu li:hover a {
-  color: @color-navy-blue;
+  color: #999;
 }
 
 #side-menu li .nav-second-level li a {
   padding: 10px 10px 10px 30px;
-  color: @color-text;
+  color: #777;
   text-transform: none;
   font-weight: 600;
 }
 
+#side-menu li .nav-second-level li a i {
+  color: #A6A6A6;
+}
+
 #side-menu li .nav-second-level li.active a {
-  color: @color-navy-blue;
+  color: #777;
 }
 
 #side-menu.nav > li > a:hover, #side-menu.nav > li > a:focus {
-  background: #fff;
+  background: #eee;
 }
 
 #side-menu li.active {
@@ -232,7 +240,7 @@
   float: right;
 }
 .fa.arrow:before {
-  content: "\f104";
+  content: "\f106";
 }
 
 .active > a > .fa.arrow:before {
