added google maps

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -229,7 +229,7 @@
 }
 
 #side-menu.nav > li > a:hover, #side-menu.nav > li > a:focus {
-  background: #eee;
+  background: #fff;
 }
 
 #side-menu li.active {
