--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -5,7 +5,7 @@
         </a>
 
         <div class="stats-label text-color">
-            <span class="font-extra-bold font-uppercase">{{global.user.profile.name}}</span>
+            <span class="font-extra-bold font-uppercase">{{global.findKey($scope.global.community.locations, $scope.global.context.location, [])[0].profile.name}}</span>
 
             <div>
                 <h4 class="font-extra-bold m-b-xs">
